[gd_scene load_steps=68 format=2]

[ext_resource path="res://game/guy/the guy.png" type="Texture" id=1]
[ext_resource path="res://game/zombie/the zombie.png" type="Texture" id=2]
[ext_resource path="res://game/zombie/zombie.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 2 )
region = Rect2( 24, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 2 )
region = Rect2( 40, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 2 )
region = Rect2( 8, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 2 )
region = Rect2( 16, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 24, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 32, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 40, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 48, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 8, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 8, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 24, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 16, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 2 )
region = Rect2( 24, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 2 )
region = Rect2( 32, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 2 )
region = Rect2( 40, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 2 )
region = Rect2( 48, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 8, 8 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 2 )
region = Rect2( 8, 32, 8, 8 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 8, 8 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 2 )
region = Rect2( 24, 32, 8, 8 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 8, 8 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 40, 32, 8, 8 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 2 )
region = Rect2( 48, 32, 8, 8 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 2 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 40, 40, 8, 8 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 48, 32, 8, 8 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 32, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 40, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 48, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 16, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 8, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 48, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 2 )
region = Rect2( 40, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 2 )
region = Rect2( 32, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 2 )
region = Rect2( 24, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 2 )
region = Rect2( 8, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 0, 40, 8, 8 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 8, 40, 8, 8 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 16, 40, 8, 8 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 24, 40, 8, 8 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 32, 40, 8, 8 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 40, 40, 8, 8 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 48, 40, 8, 8 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 8, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 16, 48, 8, 8 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 24, 48, 8, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 91 ), SubResource( 90 ) ],
"loop": true,
"name": "3a walkright",
"speed": 10.0
}, {
"frames": [ SubResource( 87 ), SubResource( 88 ) ],
"loop": true,
"name": "3b walkleft",
"speed": 10.0
}, {
"frames": [ SubResource( 39 ) ],
"loop": true,
"name": "1a front",
"speed": 5.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "3d walkback",
"speed": 10.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "1c left",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "2a stun",
"speed": 10.0
}, {
"frames": [ SubResource( 53 ), SubResource( 55 ), SubResource( 54 ) ],
"loop": true,
"name": "2d flames",
"speed": 10.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": false,
"name": "2b death",
"speed": 10.0
}, {
"frames": [ SubResource( 89 ) ],
"loop": true,
"name": "1g upright",
"speed": 5.0
}, {
"frames": [ SubResource( 92 ) ],
"loop": true,
"name": "1f upleft",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "1k nothing",
"speed": 0.1
}, {
"frames": [ SubResource( 64 ) ],
"loop": true,
"name": "1d right",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "3c walkfront",
"speed": 10.0
}, {
"frames": [ SubResource( 62 ) ],
"loop": true,
"name": "1h down",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ) ],
"loop": true,
"name": "1j downright",
"speed": 5.0
}, {
"frames": [ SubResource( 72 ) ],
"loop": true,
"name": "1e up",
"speed": 5.0
}, {
"frames": [ SubResource( 63 ) ],
"loop": true,
"name": "1i downleft",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": true,
"name": "1b back",
"speed": 5.0
}, {
"frames": [ SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": false,
"name": "2c explode",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=93]
extents = Vector2( 3, 3.5 )

[sub_resource type="CircleShape2D" id=100]
radius = 127.193

[node name="zombie" type="KinematicBody2D" groups=["killable", "undead", "zombie"]]
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "1a front"
playing = true

[node name="maincollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
z_index = 1
shape = SubResource( 93 )

[node name="othercollision" type="Area2D" parent="."]
position = Vector2( 0, 0.5 )

[node name="ClicktoKill" type="Area2D" parent="."]

[node name="clickcollision" type="CollisionShape2D" parent="ClicktoKill"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 0.5 )
shape = SubResource( 93 )
disabled = true

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 100 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 40.0
autostart = true
__meta__ = {
"_editor_description_": "The zombie will die if 60 seconds (1 minute) passes."
}

[node name="DeathCheck" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Invinciibility" type="Timer" parent="."]
wait_time = 1.353
autostart = true

[connection signal="input_event" from="ClicktoKill" to="." method="_on_Area2D_input_event"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="DeathCheck" to="." method="_on_DeathCheck_timeout"]
[connection signal="timeout" from="Invinciibility" to="." method="_on_Invinciibility_timeout"]
